--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         <a href="#projects" class="text-light hover:text-primary transition-colors duration-300">Projects</a>
         <a href="#experience" class="text-light hover:text-primary transition-colors duration-300">Experience</a>
         <a href="#contact" class="text-light hover:text-primary transition-colors duration-300">Contact</a>
-        <a href="/Devesh_Rawat_Resume.pdf" download class="gradient-bg hover:opacity-90 text-white font-medium py-2 px-4 rounded-lg transition-all duration-300 flex items-center justify-center mt-4 resume-btn">
+        <a href="/DeveshResume.pdf" download class="gradient-bg hover:opacity-90 text-white font-medium py-2 px-4 rounded-lg transition-all duration-300 flex items-center justify-center mt-4 resume-btn">
           <i class="fas fa-download mr-2"></i>
           Download Resume
         </a>
